--- a/webserver/mysite/webapp/static/webapp/home.css
+++ b/webserver/mysite/webapp/static/webapp/home.css
@@ -7,7 +7,7 @@ body {
   position: relative;
   width: 100%;
   height: 100vh;
-  background-image: url(https://raw.githubusercontent.com/oscicen/oscicen.github.io/master/img/depth-3.png), url(https://raw.githubusercontent.com/oscicen/oscicen.github.io/master/img/depth-2.png), url(https://raw.githubusercontent.com/oscicen/oscicen.github.io/master/img/depth-1.png);
+  background-image: 'MARS.png', 'JUPITER.png', 'VENUS.png';
   background-repeat: no-repeat;
   background-position: center;
   background-position: 50% 50%;
