--- a/webserver/mysite/webapp/templates/webapp/home.html
+++ b/webserver/mysite/webapp/templates/webapp/home.html
@@ -7,8 +7,7 @@
         <link rel='stylesheet' href="{% static 'webapp/home.css' %}">
     </head>
     <body>
-        {% load static %}
-        <script href="{% load static 'webapp/home.js%}""></script>
+        <script src="{% static 'webapp/home.js' %}"></script>
         <div id="parallax"><h1>@auto_astro</h1></div>
     </body>
 </html>
