--- a/webserver/mysite/webapp/static/webapp/home.css
+++ b/webserver/mysite/webapp/static/webapp/home.css
@@ -1,25 +1,11 @@
-body {
-    margin: 0;
-    padding: 0;
-    background-color: darkblue;
-}
-
 #parallax {
-    width: 100vw;
-    height: 100vh;
-    background-color: #1a1a2e;
-    border: 5px solid yellow; /* Visible border */
     position: relative;
-}
-
-h1 {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: white;
-    font-size: 50px;
-    background-color: red; /* Visible background */
-    padding: 20px;
-    margin: 0;
+    width: 100%;
+    height: 100vh;
+    background-image: 
+        url("https://images.unsplash.com/photo-1446776653964-20c1d3a81b06?w=400"),
+        url("https://images.unsplash.com/photo-1614732414444-096e5f1122d5?w=400");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 300px, 200px;
 }
