--- a/webserver/mysite/webapp/static/webapp/home.css
+++ b/webserver/mysite/webapp/static/webapp/home.css
@@ -2,10 +2,10 @@
     position: relative;
     width: 100%;
     height: 100vh;
-    background-image: 
-        url("https://images.unsplash.com/photo-1446776653964-20c1d3a81b06?w=400"),
-        url("https://images.unsplash.com/photo-1614732414444-096e5f1122d5?w=400");
+    background-image: url("{% static 'webapp/MARS.png' %}"),
+    url("{% static 'webapp/JUPITER.png' %}"),
+    url("{% static 'webapp/VENUS.png' %}");
     background-repeat: no-repeat;
-    background-position: center;
-    background-size: 300px, 200px;
+    background-position: 30% 30%, 70% 70%, center;
+    background-size: 400px, 300px, cover;
 }
