--- a/webserver/mysite/webapp/templates/webapp/home.html
+++ b/webserver/mysite/webapp/templates/webapp/home.html
@@ -17,10 +17,7 @@
                 position: relative;
                 width: 100%;
                 height: 100vh;
-                background-image: 
-                    url("https://images.unsplash.com/photo-1502134249126-9f3755a50d78?w=800"),
-                    url("https://images.unsplash.com/photo-1550985543-501d5d3c6640?w=600"),
-                    url("https://images.unsplash.com/photo-1507499739999-097706ad8914?w=400");
+                background-image: "VENUS.png", "JUPITER.png", "MARS.png";
                 background-repeat: no-repeat;
                 background-position: 30% 30%, 70% 70%, center;
                 background-size: 400px, 300px, cover;
@@ -71,11 +68,6 @@
         </style>
     </head>
     <body>
-        <!-- Optional scrolling title -->
-        <div class="scrolling-title">
-            <h2>🚀 Automating Astrophotography - Raspberry Pi Control System 🌟</h2>
-        </div>
-        
         <div id="parallax">
             <h1>@auto_astro</h1>
         </div>
