--- a/webserver/mysite/webapp/templates/webapp/home.html
+++ b/webserver/mysite/webapp/templates/webapp/home.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="{% static 'webapp/home.css' %}">
     </head>
     <body>
-        <div id="parallax"><h1>Parallax</h1></div>
+        <div id="parallax"><h1>@auto_astro</h1></div>
         
         <script>
             (function() {
