--- a/webserver/mysite/webapp/static/webapp/home.css
+++ b/webserver/mysite/webapp/static/webapp/home.css
@@ -10,6 +10,7 @@ body{
   background-repeat: no-repeat;
   background-position: center;
   background-position: 50% 50%;
+  background-size:50%;
 }
 h1 {
   position: absolute;
