--- a/webserver/mysite/webapp/static/webapp/home.css
+++ b/webserver/mysite/webapp/static/webapp/home.css
@@ -6,7 +6,8 @@ body{
   position: relative;
   width: 100%;
   height: 100vh;
-  background-image: url('VENUS.png'), url('MARS.png'), url('JUPITER.png');
+  background-image: url('NEPTUNE.png'), url('URANUS.png'), url('SATURN.png'), url('JUPITER.png'),
+  url('MARS.png'), url('EARTH.png'), url('VENUS.png'), url('MERCURY.png'), url('SUN.png');
   background-repeat: no-repeat;
   background-position: center;
   background-position: 50% 50%;
