--- a/webserver/mysite/webapp/static/webapp/home.css
+++ b/webserver/mysite/webapp/static/webapp/home.css
@@ -11,7 +11,7 @@ body{
   background-repeat: no-repeat;
   background-position: center;
   background-position: 50% 50%;
-  background-size:10%;
+  background-size:10%, 10%, 10%, 10%, 10%, 10%, 10%, 10%, 10%;
 }
 h1 {
   position: absolute;
