--- a/webserver/mysite/webapp/templates/webapp/home.html
+++ b/webserver/mysite/webapp/templates/webapp/home.html
@@ -29,8 +29,8 @@
                     let _depth6 = `${50 - (_mouseX - _w) * 0.06}% ${50 - (_mouseY - _h) * 0.09}%`;
                     let _depth7 = `${50 - (_mouseX - _w) * 0.06}% ${50 - (_mouseY - _h) * 0.12}%`;
                     let _depth8 = `${50 - (_mouseX - _w) * 0.06}% ${50 - (_mouseY - _h) * 0.16}%`;
-                    let _depth9 = `${50 - (_mouseX - _w) * 0.06}% ${50 - (_mouseY - _h) * 0.20}%`;
-                    let x = `${_depth3}, ${_depth2}, ${_depth1}`;
+                    let _depth9 = `${50 - (_mouseX - _w) * 0.06}% ${50 - (_mouseY - _h) * 0.24}%`;
+                    let x = `${_depth9},${_depth8},${_depth7},${_depth6},${_depth5},${_depth4},${_depth3}, ${_depth2}, ${_depth1}`;
                     console.log(x);
                     elem.style.backgroundPosition = x;
                 }
