--- a/webserver/mysite/webapp/templates/webapp/home.html
+++ b/webserver/mysite/webapp/templates/webapp/home.html
@@ -4,7 +4,7 @@
         <meta charset='utf-8'>
         <title>@auto_astro.beginners</title>
         {% load static %}
-        <link rel="stylesheet" href="{% static 'webapp\home.css' %}">
+        <link rel="stylesheet" href="{% static 'webapp/home.css' %}">
     </head>
     <body>
         <div id="parallax"><h1>@auto_astro</h1></div>
