some slight design changes

--- a/webserver/mysite/webapp/templates/webapp/home.html
+++ b/webserver/mysite/webapp/templates/webapp/home.html
@@ -7,8 +7,10 @@
         <link rel="stylesheet" href="{% static 'webapp/home.css' %}">
     </head>
     <body>
-        <nav id="parallax"><h1>@auto_astro</h1></nav>
-        
+        <nav id="parallax"><marquee direction="left" speed=20>@auto_astro</marquee></nav>
+        <div id="content">
+            <p>HELLO WORLD</p>
+        </div>
         <script>
             (function() {
                 // Add event listener
