--- a/webserver/mysite/webapp/static/webapp/home.css
+++ b/webserver/mysite/webapp/static/webapp/home.css
@@ -12,14 +12,14 @@ body{
   background-size: 7.04%, 7.26%, 16.66%, 20%, 0.97%, 1.82%, 1.73%, 0.7%, 20%;
   opacity: 1.0;
 }
-h1 {
+marquee {
   position: absolute;
   top: 47%;
   left: 50%;
   transform: translate(-50%, -50%);
   color: #fff;
-  font-family: "Arial";
+  font-family:Arial, Helvetica, sans-serif;
   text-transform: uppercase;
-  opacity: .2;
+  opacity: .5;
   font-size: 70px
 }
