--- a/webserver/mysite/webapp/static/webapp/home.css
+++ b/webserver/mysite/webapp/static/webapp/home.css
@@ -1,7 +1,19 @@
 body{
   margin: 0;
   background-color:#0c1c1b;
+  font-family:Arial, Helvetica, sans-serif;
 }
+marquee {
+  position: absolute;
+  top: 47%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: #fff;
+  text-transform: uppercase;
+  opacity: .5;
+  font-size: 70px
+}
+
 #parallax {
   position: relative;
   width: 100%;
@@ -12,14 +24,10 @@ body{
   background-size: 7.04%, 7.26%, 16.66%, 20%, 0.97%, 1.82%, 1.73%, 0.7%, 20%;
   opacity: 1.0;
 }
-marquee {
-  position: absolute;
-  top: 47%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: #fff;
-  font-family:Arial, Helvetica, sans-serif;
-  text-transform: uppercase;
-  opacity: .5;
-  font-size: 70px
+
+#content{
+  position: relative;
+  background-position: 50% 50%;
+  font-size:25px;
+  color:aliceblue;
 }
