--- a/webserver/mysite/webapp/static/webapp/home.css
+++ b/webserver/mysite/webapp/static/webapp/home.css
@@ -1,7 +1,7 @@
 body{
   margin: 0;
   background-color:#0c1c1b;
-  font-family:Arial, Helvetica, sans-serif;
+  font-family:Helvetica, sans-serif;
 }
 marquee {
   position: absolute;
@@ -30,4 +30,5 @@ marquee {
   background-position: 50% 50%;
   font-size:25px;
   color:aliceblue;
+  text-align: center;
 }
