--- a/webserver/mysite/webapp/static/webapp/home.css
+++ b/webserver/mysite/webapp/static/webapp/home.css
@@ -1,7 +1,13 @@
+@font-face {
+      font-family: 'SpaceFont';
+      src: url('custom_spatial_font.ttf') format('ttf');
+      font-weight: normal; 
+      font-style: normal;
+}
 body{
   margin: 0;
   background-color:#0c1c1b;
-  font-family:Helvetica, sans-serif;
+  font-family:'SpaceFont', sans-serif;
 }
 marquee {
   position: absolute;
@@ -10,14 +16,14 @@ marquee {
   transform: translate(-50%, -50%);
   color: #fff;
   text-transform: uppercase;
-  opacity: .5;
+  opacity: .8;
   font-size: 70px
 }
 
 #parallax {
   position: relative;
   width: 100%;
-  height: 600px;
+  height: 200px;
   background-image: url('/static/webapp/NEPTUNE.png'), url('/static/webapp/URANUS.png'), url('/static/webapp/SATURNE.png'), url('/static/webapp/JUPITER.png'), url('/static/webapp/MARS.png'), url('/static/webapp/EARTH.png'), url('/static/webapp/VENUS.png'), url('/static/webapp/MERCURY.png'), url('/static/webapp/SUN.png');
   background-repeat: no-repeat;
   background-position: 50% 50%;
