--- a/webserver/mysite/webapp/templates/webapp/home.html
+++ b/webserver/mysite/webapp/templates/webapp/home.html
@@ -23,18 +23,24 @@
                     let _h = window.innerHeight/2;
                     let _mouseX = e.clientX;
                     let _mouseY = e.clientY;
-                    let _depth1 = `${50 - (_mouseX - _w) * 0.00}% ${50 - (_mouseY - _h) * 0.00}%`;
-                    let _depth2 = `${50 - (_mouseX - _w) * 0.01}% ${50 - (_mouseY - _h) * 0.01}%`;
-                    let _depth3 = `${50 - (_mouseX - _w) * 0.02}% ${50 - (_mouseY - _h) * 0.02}%`;
-                    let _depth4 = `${50 - (_mouseX - _w) * 0.026}% ${50 - (_mouseY - _h) * 0.026}%`;
-                    let _depth5 = `${50 - (_mouseX - _w) * 0.04}% ${50 - (_mouseY - _h) * 0.04}%`;
-                    let _depth6 = `${50 - (_mouseX - _w) * 0.135}% ${50 - (_mouseY - _h) * 0.135}%`;
-                    let _depth7 = `${50 - (_mouseX - _w) * 0.246}% ${50 - (_mouseY - _h) * 0.246}%`;
-                    let _depth8 = `${50 - (_mouseX - _w) * 0.5}% ${50 - (_mouseY - _h) * 0.5}%`;
-                    let _depth9 = `${50 - (_mouseX - _w) * 0.77}% ${50 - (_mouseY - _h) * 0.77}%`;
-                    let x = `${_depth9}, ${_depth8}, ${_depth7}, ${_depth6}, ${_depth5}, ${_depth4}, ${_depth3}, ${_depth2}, ${_depth1}`;
-                    console.log(x);
-                    elem.style.backgroundPosition = x;
+                    
+                    if (_mouseY > 1400) {
+                        let _depth1 = `${50 - (_mouseX - _w) * 0.00}% ${50 - (_mouseY - _h) * 0.00}%`;
+                        let _depth2 = `${50 - (_mouseX - _w) * 0.01}% ${50 - (_mouseY - _h) * 0.01}%`;
+                        let _depth3 = `${50 - (_mouseX - _w) * 0.02}% ${50 - (_mouseY - _h) * 0.02}%`;
+                        let _depth4 = `${50 - (_mouseX - _w) * 0.026}% ${50 - (_mouseY - _h) * 0.026}%`;
+                        let _depth5 = `${50 - (_mouseX - _w) * 0.04}% ${50 - (_mouseY - _h) * 0.04}%`;
+                        let _depth6 = `${50 - (_mouseX - _w) * 0.135}% ${50 - (_mouseY - _h) * 0.135}%`;
+                        let _depth7 = `${50 - (_mouseX - _w) * 0.246}% ${50 - (_mouseY - _h) * 0.246}%`;
+                        let _depth8 = `${50 - (_mouseX - _w) * 0.5}% ${50 - (_mouseY - _h) * 0.5}%`;
+                        let _depth9 = `${50 - (_mouseX - _w) * 0.77}% ${50 - (_mouseY - _h) * 0.77}%`;
+                        let x = `${_depth9}, ${_depth8}, ${_depth7}, ${_depth6}, ${_depth5}, ${_depth4}, ${_depth3}, ${_depth2}, ${_depth1}`;
+                        console.log(x);
+                        elem.style.backgroundPosition = x;
+                    } else {
+                        // Reset to center position when mouse is above 1400px
+                        elem.style.backgroundPosition = "50% 50%, 50% 50%, 50% 50%, 50% 50%, 50% 50%, 50% 50%, 50% 50%, 50% 50%, 50% 50%";
+                    }
                 }
             })();
         </script>
