--- a/webserver/mysite/webapp/static/webapp/home.css
+++ b/webserver/mysite/webapp/static/webapp/home.css
@@ -1,7 +1,10 @@
 @font-face {
-      font-family: 'SpaceFont';
-      src: url('/static/webapp/custom_spatial_font.ttf') format('ttf');      font-weight: normal; 
-      font-style: normal;
+    font-family: 'SpaceFont';
+    src: url('/static/webapp/custom_spatial_font.woff2') format('woff2'),
+         url('/static/webapp/custom_spatial_font.woff') format('woff'),
+         url('/static/webapp/custom_spatial_font.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
 }
 body{
   margin: 0;
@@ -22,7 +25,7 @@ marquee {
 #parallax {
   position: relative;
   width: 100%;
-  height: 200px;
+  height: 500px;
   background-image: url('/static/webapp/NEPTUNE.png'), url('/static/webapp/URANUS.png'), url('/static/webapp/SATURNE.png'), url('/static/webapp/JUPITER.png'), url('/static/webapp/MARS.png'), url('/static/webapp/EARTH.png'), url('/static/webapp/VENUS.png'), url('/static/webapp/MERCURY.png'), url('/static/webapp/SUN.png');
   background-repeat: no-repeat;
   background-position: 50% 50%;
