--- a/webserver/mysite/webapp/templates/webapp/home.html
+++ b/webserver/mysite/webapp/templates/webapp/home.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="{% static 'webapp/home.css' %}">
     </head>
     <body>
-        <nav id="parallax"><marquee direction="left" speed=20>@auto_astro</marquee></nav>
+        <nav id="parallax"><h1 id="wlc_title">@auto_astro</h1></nav>
         <div id="content">
             <p>HELLO WORLD</p>
         </div>
