--- a/webserver/mysite/webapp/static/webapp/home.css
+++ b/webserver/mysite/webapp/static/webapp/home.css
@@ -1,8 +1,8 @@
 @font-face {
     font-family: 'SpaceFont';
-    src: url('/static/webapp/custom_spatial_font.woff2') format('woff2'),
-         url('/static/webapp/custom_spatial_font.woff') format('woff'),
-         url('/static/webapp/custom_spatial_font.ttf') format('truetype');
+    src: url('ustom_spatial_font.woff2') format('woff2'),
+         url('custom_spatial_font.woff') format('woff'),
+         url('custom_spatial_font.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
