--- a/webserver/mysite/webapp/templates/webapp/home.html
+++ b/webserver/mysite/webapp/templates/webapp/home.html
@@ -24,7 +24,7 @@
                     let _mouseX = e.clientX;
                     let _mouseY = e.clientY;
                     
-                    if (_mouseY > 1400) {
+                    while(_mouseY < 1400) {
                         let _depth1 = `${50 - (_mouseX - _w) * 0.00}% ${50 - (_mouseY - _h) * 0.00}%`;
                         let _depth2 = `${50 - (_mouseX - _w) * 0.01}% ${50 - (_mouseY - _h) * 0.01}%`;
                         let _depth3 = `${50 - (_mouseX - _w) * 0.02}% ${50 - (_mouseY - _h) * 0.02}%`;
@@ -37,12 +37,10 @@
                         let x = `${_depth9}, ${_depth8}, ${_depth7}, ${_depth6}, ${_depth5}, ${_depth4}, ${_depth3}, ${_depth2}, ${_depth1}`;
                         console.log(x);
                         elem.style.backgroundPosition = x;
-                    } else {
+                    }
                         // Reset to center position when mouse is above 1400px
                         elem.style.backgroundPosition = "50% 50%, 50% 50%, 50% 50%, 50% 50%, 50% 50%, 50% 50%, 50% 50%, 50% 50%, 50% 50%";
-                    }
-                }
-            })();
+            }})();
         </script>
     </body>
 </html>
