--- a/webserver/mysite/webapp/templates/webapp/home.html
+++ b/webserver/mysite/webapp/templates/webapp/home.html
@@ -23,6 +23,7 @@
                     let _h = window.innerHeight/2;
                     let _mouseX = e.clientX;
                     let _mouseY = e.clientY;
+                    print(_mouseY)
                     
                     while(_mouseY < 1400) {
                         let _depth1 = `${50 - (_mouseX - _w) * 0.00}% ${50 - (_mouseY - _h) * 0.00}%`;
