Locked the planets at current position when mouse goes outside nav, inside of just going to middle instantly. + tyring to solve the file hierarchy issue with the font, which is STILL NOT WORKING !

--- a/webserver/mysite/webapp/static/webapp/home.css
+++ b/webserver/mysite/webapp/static/webapp/home.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family:'SpaceFont';
-    src:url('fonts/custom_spatial_font.ttf');
+    src: url('/static/fonts/custom_spatial_font.ttf') format('truetype');
 }
 body{
   margin: 0;
@@ -9,7 +9,7 @@ body{
 }
 #wlc_title {
   position: absolute;
-  top: 47%;
+  top: 35%;
   left: 50%;
   transform: translate(-50%, -50%);
   color: #fff;
