--- a/webserver/mysite/webapp/templates/webapp/home.html
+++ b/webserver/mysite/webapp/templates/webapp/home.html
@@ -38,7 +38,7 @@
                     elem.style.backgroundPosition = x;
                     }
                     else {
-                        elem.style.backgroundPosition = "50% 50%, 50% 50%, 50% 50%, 50% 50%, 50% 50%, 50% 50%, 50% 50%, 50% 50%, 50% 50%";
+                        elem.style.backgroundPosition = `50% 50%, ${_depth2}, ${_depth3}, ${_depth4}, ${_depth5}, ${_depth6}, ${_depth7}, ${_depth8}, ${_depth9}`;
                     }
                 }
             })();
