--- a/webserver/mysite/webapp/static/webapp/home.css
+++ b/webserver/mysite/webapp/static/webapp/home.css
@@ -1,10 +1,7 @@
 @font-face {
-    font-family: 'spacefont';
-    src: url('StarJedi.woff2') format('woff2'),
-        url('StarJedi.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
+    font-family: 'SpaceFont';
+    src: url('fonts/StarJedi.woff2') format('woff2'),
+         url('fonts/StarJedi.woff') format('woff');
 }
 body{
   margin: 0;
