--- a/webserver/mysite/webapp/static/webapp/home.css
+++ b/webserver/mysite/webapp/static/webapp/home.css
@@ -2,7 +2,7 @@
 
 body{
   margin: 0;
-  background-color:hsl(176, 40%, 8%);
+  background-image:url('STARRY.gif');
   font-family: 'Orbitron', sans-serif;
 }
 #wlc_title {
@@ -16,7 +16,7 @@ body{
   font-size: 70px
 }
 
-#parallax {
+#parallax_nav {
   position: relative;
   width: 100%;
   height: 500px;
