--- a/webserver/mysite/webapp/static/webapp/home.css
+++ b/webserver/mysite/webapp/static/webapp/home.css
@@ -4,6 +4,12 @@ body{
   margin: 0;
   background-image:url('STARRY.gif');
   font-family: 'Orbitron', sans-serif;
+  margin: 0;
+  background-color: #000000;
+  background-image: url('../images/stars.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 #wlc_title {
   position: absolute;
