--- a/webserver/mysite/webapp/static/webapp/home.css
+++ b/webserver/mysite/webapp/static/webapp/home.css
@@ -6,7 +6,7 @@ body{
   font-family: 'Orbitron', sans-serif;
   margin: 0;
   background-color: #000000;
-  background-image: url('../images/stars.jpg');
+  background-image: url('STARRY.gif');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
