--- a/webserver/mysite/webapp/static/webapp/home.css
+++ b/webserver/mysite/webapp/static/webapp/home.css
@@ -8,7 +8,7 @@ body{
   background-color: #000000;
   background-image: url('STARRY.gif');
   background-size: cover;
-  background-repeat: no-repeat;
+  background-repeat: repeat;
   background-position: center;
 }
 #wlc_title {
