--- a/webserver/mysite/webapp/static/webapp/home.css
+++ b/webserver/mysite/webapp/static/webapp/home.css
@@ -7,7 +7,7 @@ body{
   margin: 0;
   background-color: #000000;
   background-image: url('STARRY.gif');
-  background-repeat: no-repeat;
+  background-repeat: repeat;
   background-position: center;
 }
 #wlc_title {
